--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "thrivetrack",
+  "name": "project-thrivetrack",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,12 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
+    "formik": "^2.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.1.1",
-    "react-router-dom": "^6.14.2",
-    "redux": "^4.2.1"
+    "react-icons": "^4.10.1",
+    "react-router-dom": "^6.14.1",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
